--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "multer": "^1.4.5-lts.1",
