--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
     "connect-redis": "^7.0.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-mailjet": "^6.0.6",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
