--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "namvt16052004",
     "database": "threads",
     "host": "127.0.0.1",
     "dialect": "postgres",
