--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,11 +1,17 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "namvt16052004",
-    "database": "threads",
-    "host": "127.0.0.1",
+    "username": "simple_threads_db_ww8w_user",
+    "password": "tEB5b7aGLbDVarktXuTwXBaCtxLCvCf7",
+    "database": "simple_threads_db_ww8w",
+    "host": "dpg-ctmgj4tumphs73df3730-a.singapore-postgres.render.com",
     "dialect": "postgres",
-    "port": 5432
+    "port": 5432,
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   },
   "test": {
     "username": "postgres",
@@ -15,10 +21,17 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "threads",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "username": "simple_threads_db_ww8w_user",
+    "password": "tEB5b7aGLbDVarktXuTwXBaCtxLCvCf7",
+    "database": "simple_threads_db_ww8w",
+    "host": "dpg-ctmgj4tumphs73df3730-a.singapore-postgres.render.com",
+    "dialect": "postgres",
+    "port": 5432,
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
